project/test/semantics/bad/input/Bad14_shouldThrowIllegalSideEffectsErrorInClassAttributeDeclarations.ty
mutable class SomeMutableClass {

    values: {
        total: Int;
        goodAttribute: Void = Pass;
    }
    
    variables: {
        var1: Int = 1;
        var2: String = "S";
        badAttribute: Void = val x: Int = 3;;
    }
    
    functions: {
        getValue: () -> Int = 50
        
        goodFunction: (param1: Int, param2: String, param3: Bool) -> Int = param1
        
        anotherGoodFunction: (param1: Int, param2: Int, param3: Int) -> Int = {
            this.var1
        }
    }
}

singleton class Main {
    
    actions: {
        main: () -> Void = Pass
    }
}
